--- a/css/twentytwenty.css
+++ b/css/twentytwenty.css
@@ -1,18 +1,20 @@
 .twentytwenty-horizontal .twentytwenty-handle:before, .twentytwenty-horizontal .twentytwenty-handle:after, .twentytwenty-vertical .twentytwenty-handle:before, .twentytwenty-vertical .twentytwenty-handle:after {
   content: " ";
   display: block;
-  background: white;
+  background: none;
   position: absolute;
   z-index: 30;
+  /*
   -webkit-box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5);
-  box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5); }
+  box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5);
+*/}
 
 .twentytwenty-horizontal .twentytwenty-handle:before, .twentytwenty-horizontal .twentytwenty-handle:after {
-  width: 3px;
+  width: 10px;
   height: 9999px;
   left: 50%;
-  margin-left: -1.5px; }
+  margin-left: -5px; }
 
 .twentytwenty-vertical .twentytwenty-handle:before, .twentytwenty-vertical .twentytwenty-handle:after {
   width: 9999px;
@@ -61,18 +63,25 @@
   width: 90px; }
 
 .twentytwenty-left-arrow, .twentytwenty-right-arrow, .twentytwenty-up-arrow, .twentytwenty-down-arrow {
-  width: 0;
-  height: 0;
-  border: 6px inset transparent;
+  width: 30px;
+  height: 30px;
+  /*border: 10px inset transparent;*/
   position: absolute; }
 
-.twentytwenty-left-arrow, .twentytwenty-right-arrow {
+.twentytwenty-left-arrow{
   top: 50%;
-  margin-top: -6px; }
+  margin-top: 15px; }
+
+
+ .twentytwenty-right-arrow {
+    top: 50%;
+    margin-top: 16px; }
 
 .twentytwenty-up-arrow, .twentytwenty-down-arrow {
   left: 50%;
-  margin-left: -6px; }
+  margin-left: -10px; }
+
+
 
 .twentytwenty-container {
   -webkit-box-sizing: content-box;
@@ -141,65 +150,84 @@
   z-index: 10; }
 
 .twentytwenty-handle {
-  height: 38px;
-  width: 38px;
+  height: 60px;
+  width: 60px;
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-left: -22px;
-  margin-top: -22px;
-  border: 3px solid white;
+  margin-left: -30px;
+  margin-top: -30px;
+  /*
+  border: 0px solid white;
   -webkit-border-radius: 1000px;
   -moz-border-radius: 1000px;
   border-radius: 1000px;
   -webkit-box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5);
   box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5);
+  */
+  background: rgba(0,0,0, 0.2);
+    border-radius: 100%;
   z-index: 40;
   cursor: pointer; }
 
 .twentytwenty-horizontal .twentytwenty-handle:before {
   bottom: 50%;
   margin-bottom: 22px;
+  /*
   -webkit-box-shadow: 0 3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: 0 3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
-  box-shadow: 0 3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5); }
+  box-shadow: 0 3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
+*/}
+
 .twentytwenty-horizontal .twentytwenty-handle:after {
   top: 50%;
   margin-top: 22px;
+  /*
   -webkit-box-shadow: 0 -3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: 0 -3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
-  box-shadow: 0 -3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5); }
+  box-shadow: 0 -3px 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
+*/
+}
 
 .twentytwenty-vertical .twentytwenty-handle:before {
   left: 50%;
   margin-left: 22px;
+  /*
   -webkit-box-shadow: 3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: 3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
-  box-shadow: 3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5); }
+  box-shadow: 3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
+*/
+}
 .twentytwenty-vertical .twentytwenty-handle:after {
   right: 50%;
   margin-right: 22px;
+  /*
   -webkit-box-shadow: -3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: -3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
-  box-shadow: -3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5); }
+  box-shadow: -3px 0 0 white, 0px 0px 12px rgba(51, 51, 51, 0.5);
+*/}
 
 .twentytwenty-left-arrow {
-  border-right: 6px solid white;
+
   left: 50%;
-  margin-left: -17px; }
+  margin-left: -27px; }
 
 .twentytwenty-right-arrow {
-  border-left: 6px solid white;
+
   right: 50%;
-  margin-right: -17px; }
+  margin-right: -29px; }
 
 .twentytwenty-up-arrow {
-  border-bottom: 6px solid white;
+
   top: 50%;
-  margin-top: -17px; }
+  margin-top: -26px; }
 
 .twentytwenty-down-arrow {
-  border-top: 6px solid white;
+
   bottom: 50%;
-  margin-bottom: -17px; }
+  margin-bottom: -26px; }
+
+.smoothtransition{
+    transition: all 0.4s;
+}
